# Open-Transactions

./: .gitignore
docs/: INSTALL-linux-modern.txt  TODO.txt
include/otlib/: OTString.hpp
sample-data/sample-contracts/: pepsi.xml
src/otcli/: .gitignore  cmd.cpp  cmd.hpp  cmd_detail.hpp  cmd_tests.cpp  cmd_tree.cpp  doc.txt  main.cpp  otcli.cpp  othint.cpp  othint.hpp  todo-and-bugs.txt  useot.cpp  useot.hpp  utils.cpp  utils.hpp
src/othint/: .othint.hpp.swp  CMakeLists.txt  LICENCE.txt  README.txt  autostart-dev.local.example  cmd.cpp  cmd.hpp  doc.txt  full-rebuild.sh  lib_common1.hpp  lib_common2.hpp  lib_common3.hpp  main.cpp  otcli.cpp  otcli.hpp  othint.cpp  othint.hpp  run-devel.sh  template.hpp  tests.cpp  tests.hpp  todo-and-bugs.txt  useot.cpp  useot.hpp  utils.cpp  utils.hpp
src/othint/cmake/modules/: FindOTLocal.cmake
src/otlib/: OTPaths.cpp  OTString.cpp
